# DataGet

./: LICENSE  README.md  gridmet.py  pyproject.toml
dataget/: __init__.py  gridmet.py
