[project]
name = "dataget"
version = "0.0.1"
authors = [
    {name = "Chung-Yi Lin", email = "philip928lin@gmail.com"}
]
license = { file = "LICENSE" }
description = "A collection of data downloaders and extractors. (personal use only)"
readme = { file = "README.md", content-type = "text/markdown" }  # Specify README with content type
dependencies = [
    "requests",
    "pandas",
    "xarray",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# tools
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
]